--- a/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_16_relu.ipynb
+++ b/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_16_relu.ipynb
@@ -204,9 +204,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test fold 1 \t Epoch [  0] \t Train Loss: 0.48384993 \t Val Loss: 0.47540801 \t Test Loss: 0.45942624\n",
+      "Test fold 1 \t Epoch [  1] \t Train Loss: 0.44844187 \t Val Loss: 0.46252799 \t Test Loss: 0.46144144\n",
+      "Test fold 1 \t Epoch [  2] \t Train Loss: 0.44791258 \t Val Loss: 0.46315140 \t Test Loss: 0.46053171\n",
+      "Test fold 1 \t Epoch [  3] \t Train Loss: 0.44822470 \t Val Loss: 0.46218324 \t Test Loss: 0.46212122\n",
+      "Test fold 1 \t Epoch [  4] \t Train Loss: 0.44922738 \t Val Loss: 0.46268925 \t Test Loss: 0.46118780\n",
+      "Test fold 1 \t Epoch [  5] \t Train Loss: 0.44959025 \t Val Loss: 0.46520050 \t Test Loss: 0.45904396\n",
+      "Test fold 1 \t Epoch [  6] \t Train Loss: 0.44830180 \t Val Loss: 0.46225859 \t Test Loss: 0.46201826\n",
+      "Test fold 1 \t Epoch [  7] \t Train Loss: 0.44819094 \t Val Loss: 0.46255852 \t Test Loss: 0.46137053\n",
+      "Test fold 1 \t Epoch [  8] \t Train Loss: 0.44832266 \t Val Loss: 0.46241718 \t Test Loss: 0.46169603\n",
+      "Test fold 1 \t Epoch [  9] \t Train Loss: 0.44776946 \t Val Loss: 0.46313396 \t Test Loss: 0.46062361\n",
+      "Test fold 1 \t Epoch [ 10] \t Train Loss: 0.44955410 \t Val Loss: 0.46291887 \t Test Loss: 0.46081506\n",
+      "Test fold 1 \t Epoch [ 11] \t Train Loss: 0.44927278 \t Val Loss: 0.46366566 \t Test Loss: 0.46009773\n",
+      "Test fold 1 \t Epoch [ 12] \t Train Loss: 0.44802857 \t Val Loss: 0.46256379 \t Test Loss: 0.46138095\n",
+      "Test fold 1 \t Epoch [ 13] \t Train Loss: 0.44765532 \t Val Loss: 0.46228392 \t Test Loss: 0.46188483\n",
+      "Test fold 1 \t Epoch [ 14] \t Train Loss: 0.44834283 \t Val Loss: 0.46423326 \t Test Loss: 0.45952161\n",
+      "Test fold 1 \t Epoch [ 15] \t Train Loss: 0.44937850 \t Val Loss: 0.46236232 \t Test Loss: 0.46160186\n",
+      "Test fold 1 \t Epoch [ 16] \t Train Loss: 0.44824417 \t Val Loss: 0.46348726 \t Test Loss: 0.46019257\n",
+      "Test fold 1 \t Epoch [ 17] \t Train Loss: 0.44759326 \t Val Loss: 0.46236245 \t Test Loss: 0.46169138\n",
+      "Test fold 1 \t Epoch [ 18] \t Train Loss: 0.44801300 \t Val Loss: 0.46234262 \t Test Loss: 0.46167961\n",
+      "Test fold 1 \t Epoch [ 19] \t Train Loss: 0.44816024 \t Val Loss: 0.46263486 \t Test Loss: 0.46110886\n",
+      "Test fold 1 \t Epoch [ 20] \t Train Loss: 0.45023427 \t Val Loss: 0.46388021 \t Test Loss: 0.45979506\n",
+      "Test fold 1 \t Epoch [ 21] \t Train Loss: 0.44743659 \t Val Loss: 0.46213075 \t Test Loss: 0.46225491\n",
+      "Test fold 1 \t Epoch [ 22] \t Train Loss: 0.44809217 \t Val Loss: 0.46247003 \t Test Loss: 0.46154433\n",
+      "Test fold 1 \t Epoch [ 23] \t Train Loss: 0.44786184 \t Val Loss: 0.46216055 \t Test Loss: 0.46219629\n",
+      "Test fold 1 \t Epoch [ 24] \t Train Loss: 0.44811066 \t Val Loss: 0.46304369 \t Test Loss: 0.46066556\n",
+      "Test fold 1 \t Epoch [ 25] \t Train Loss: 0.44780422 \t Val Loss: 0.46346366 \t Test Loss: 0.46024957\n",
+      "Test fold 1 \t Epoch [ 26] \t Train Loss: 0.44791073 \t Val Loss: 0.46292585 \t Test Loss: 0.46082924\n",
+      "Test fold 1 \t Epoch [ 27] \t Train Loss: 0.44764850 \t Val Loss: 0.46289104 \t Test Loss: 0.46084147\n",
+      "Test fold 1 \t Epoch [ 28] \t Train Loss: 0.44840129 \t Val Loss: 0.46270540 \t Test Loss: 0.46106997\n",
+      "Test fold 1 \t Epoch [ 29] \t Train Loss: 0.44778203 \t Val Loss: 0.46435579 \t Test Loss: 0.45947626\n",
+      "Test fold 1 \t Epoch [ 30] \t Train Loss: 0.44799850 \t Val Loss: 0.46316529 \t Test Loss: 0.46050202\n",
+      "Test fold 1 \t Epoch [ 31] \t Train Loss: 0.44835205 \t Val Loss: 0.46255786 \t Test Loss: 0.46132990\n",
+      "Test fold 1 \t Epoch [ 32] \t Train Loss: 0.44876547 \t Val Loss: 0.46347204 \t Test Loss: 0.46016927\n",
+      "Test fold 1 \t Epoch [ 33] \t Train Loss: 0.44789268 \t Val Loss: 0.46320785 \t Test Loss: 0.46041051\n",
+      "Test fold 1 \t Epoch [ 34] \t Train Loss: 0.44874456 \t Val Loss: 0.46252370 \t Test Loss: 0.46138621\n",
+      "Test fold 1 \t Epoch [ 35] \t Train Loss: 0.44771070 \t Val Loss: 0.46350475 \t Test Loss: 0.46004390\n",
+      "Test fold 1 \t Epoch [ 36] \t Train Loss: 0.44844138 \t Val Loss: 0.46231838 \t Test Loss: 0.46161964\n",
+      "Test fold 1 \t Epoch [ 37] \t Train Loss: 0.44841321 \t Val Loss: 0.46398625 \t Test Loss: 0.45965487\n",
+      "Test fold 1 \t Epoch [ 38] \t Train Loss: 0.44879952 \t Val Loss: 0.46184829 \t Test Loss: 0.46284585\n",
+      "Test fold 1 \t Epoch [ 39] \t Train Loss: 0.44978680 \t Val Loss: 0.46486557 \t Test Loss: 0.45909014\n",
+      "Test fold 1 \t Epoch [ 40] \t Train Loss: 0.44831646 \t Val Loss: 0.46293504 \t Test Loss: 0.46065275\n",
+      "Test fold 1 \t Epoch [ 41] \t Train Loss: 0.44773358 \t Val Loss: 0.46275796 \t Test Loss: 0.46087112\n",
+      "Test fold 1 \t Epoch [ 42] \t Train Loss: 0.44794273 \t Val Loss: 0.46277652 \t Test Loss: 0.46085254\n",
+      "Test fold 1 \t Epoch [ 43] \t Train Loss: 0.44818693 \t Val Loss: 0.46379259 \t Test Loss: 0.45977171\n",
+      "Test fold 1 \t Epoch [ 44] \t Train Loss: 0.44850728 \t Val Loss: 0.46234280 \t Test Loss: 0.46155382\n",
+      "Test fold 1 \t Epoch [ 45] \t Train Loss: 0.44754255 \t Val Loss: 0.46264123 \t Test Loss: 0.46104854\n",
+      "Test fold 1 \t Epoch [ 46] \t Train Loss: 0.44869672 \t Val Loss: 0.46264392 \t Test Loss: 0.46113161\n",
+      "Test fold 1 \t Epoch [ 47] \t Train Loss: 0.44777854 \t Val Loss: 0.46309599 \t Test Loss: 0.46051254\n",
+      "Test fold 1 \t Epoch [ 48] \t Train Loss: 0.44882495 \t Val Loss: 0.46352497 \t Test Loss: 0.46001383\n",
+      "Test fold 1 \t Epoch [ 49] \t Train Loss: 0.44818751 \t Val Loss: 0.46374009 \t Test Loss: 0.45988696\n",
+      "Test fold 1 \t Epoch [ 50] \t Train Loss: 0.44840403 \t Val Loss: 0.46318655 \t Test Loss: 0.46041149\n",
+      "Test fold 1 \t Epoch [ 51] \t Train Loss: 0.44775049 \t Val Loss: 0.46321944 \t Test Loss: 0.46034095\n",
+      "Test fold 1 \t Epoch [ 52] \t Train Loss: 0.44755866 \t Val Loss: 0.46336394 \t Test Loss: 0.46017516\n",
+      "Test fold 1 \t Epoch [ 53] \t Train Loss: 0.44768362 \t Val Loss: 0.46272460 \t Test Loss: 0.46094839\n",
+      "Test fold 1 \t Epoch [ 54] \t Train Loss: 0.44834147 \t Val Loss: 0.46340812 \t Test Loss: 0.46016706\n",
+      "Test fold 1 \t Epoch [ 55] \t Train Loss: 0.44821812 \t Val Loss: 0.46372208 \t Test Loss: 0.45992611\n",
+      "Test fold 1 \t Epoch [ 56] \t Train Loss: 0.44772491 \t Val Loss: 0.46269238 \t Test Loss: 0.46109544\n",
+      "Test fold 1 \t Epoch [ 57] \t Train Loss: 0.44826969 \t Val Loss: 0.46257963 \t Test Loss: 0.46127464\n",
+      "Test fold 1 \t Epoch [ 58] \t Train Loss: 0.44823805 \t Val Loss: 0.46349584 \t Test Loss: 0.46006791\n",
+      "Test fold 1 \t Epoch [ 59] \t Train Loss: 0.44841901 \t Val Loss: 0.46407285 \t Test Loss: 0.45962449\n",
+      "Test fold 1 \t Epoch [ 60] \t Train Loss: 0.44794369 \t Val Loss: 0.46256149 \t Test Loss: 0.46122097\n",
+      "Test fold 1 \t Epoch [ 61] \t Train Loss: 0.44776432 \t Val Loss: 0.46311979 \t Test Loss: 0.46046098\n",
+      "Test fold 1 \t Epoch [ 62] \t Train Loss: 0.44812090 \t Val Loss: 0.46252330 \t Test Loss: 0.46132380\n",
+      "Test fold 1 \t Epoch [ 63] \t Train Loss: 0.44771602 \t Val Loss: 0.46272146 \t Test Loss: 0.46100683\n",
+      "Test fold 1 \t Epoch [ 64] \t Train Loss: 0.44782472 \t Val Loss: 0.46255821 \t Test Loss: 0.46125630\n",
+      "Test fold 1 \t Epoch [ 65] \t Train Loss: 0.44817038 \t Val Loss: 0.46290571 \t Test Loss: 0.46074954\n",
+      "Test fold 1 \t Epoch [ 66] \t Train Loss: 0.44772030 \t Val Loss: 0.46221696 \t Test Loss: 0.46192973\n",
+      "Test fold 1 \t Epoch [ 67] \t Train Loss: 0.44763421 \t Val Loss: 0.46357381 \t Test Loss: 0.45999365\n",
+      "Test fold 1 \t Epoch [ 68] \t Train Loss: 0.44963067 \t Val Loss: 0.46368468 \t Test Loss: 0.45989428\n",
+      "Test fold 1 \t Epoch [ 69] \t Train Loss: 0.44781259 \t Val Loss: 0.46258265 \t Test Loss: 0.46122074\n",
+      "Test fold 1 \t Epoch [ 70] \t Train Loss: 0.44769341 \t Val Loss: 0.46314296 \t Test Loss: 0.46044375\n",
+      "Test fold 1 \t Epoch [ 71] \t Train Loss: 0.44841756 \t Val Loss: 0.46260192 \t Test Loss: 0.46117097\n",
+      "Test fold 1 \t Epoch [ 72] \t Train Loss: 0.44800586 \t Val Loss: 0.46426037 \t Test Loss: 0.45948566\n",
+      "Test fold 1 \t Epoch [ 73] \t Train Loss: 0.44848852 \t Val Loss: 0.46203350 \t Test Loss: 0.46242732\n",
+      "Test fold 1 \t Epoch [ 74] \t Train Loss: 0.44828301 \t Val Loss: 0.46300926 \t Test Loss: 0.46059087\n",
+      "Test fold 1 \t Epoch [ 75] \t Train Loss: 0.44792667 \t Val Loss: 0.46296191 \t Test Loss: 0.46067369\n",
+      "Test fold 1 \t Epoch [ 76] \t Train Loss: 0.44795097 \t Val Loss: 0.46351845 \t Test Loss: 0.46004661\n",
+      "Test fold 1 \t Epoch [ 77] \t Train Loss: 0.44808761 \t Val Loss: 0.46275751 \t Test Loss: 0.46087336\n",
+      "Test fold 1 \t Epoch [ 78] \t Train Loss: 0.44832648 \t Val Loss: 0.46315254 \t Test Loss: 0.46040999\n",
+      "Test fold 1 \t Epoch [ 79] \t Train Loss: 0.44768964 \t Val Loss: 0.46290120 \t Test Loss: 0.46071627\n",
+      "Test fold 1 \t Epoch [ 80] \t Train Loss: 0.44758342 \t Val Loss: 0.46328996 \t Test Loss: 0.46023061\n",
+      "Test fold 1 \t Epoch [ 81] \t Train Loss: 0.44761105 \t Val Loss: 0.46275406 \t Test Loss: 0.46091920\n",
+      "Test fold 1 \t Epoch [ 82] \t Train Loss: 0.44768788 \t Val Loss: 0.46293148 \t Test Loss: 0.46064320\n",
+      "Test fold 1 \t Epoch [ 83] \t Train Loss: 0.44831312 \t Val Loss: 0.46315816 \t Test Loss: 0.46041465\n",
+      "Test fold 1 \t Epoch [ 84] \t Train Loss: 0.44791588 \t Val Loss: 0.46389023 \t Test Loss: 0.45975445\n",
+      "Test fold 1 \t Epoch [ 85] \t Train Loss: 0.44750676 \t Val Loss: 0.46238471 \t Test Loss: 0.46157280\n",
+      "Test fold 1 \t Epoch [ 86] \t Train Loss: 0.44772417 \t Val Loss: 0.46292721 \t Test Loss: 0.46068280\n",
+      "Test fold 1 \t Epoch [ 87] \t Train Loss: 0.44765601 \t Val Loss: 0.46296493 \t Test Loss: 0.46062099\n",
+      "Test fold 1 \t Epoch [ 88] \t Train Loss: 0.44758076 \t Val Loss: 0.46266561 \t Test Loss: 0.46101970\n",
+      "Early stopping triggered after 89 epochs.\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the model, loss function, and optimizer\n",
     "model = RNNModel(1, hidden_size, num_layers)\n",
