--- a/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_16_tanh.ipynb
+++ b/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_16_tanh.ipynb
@@ -25,8 +25,8 @@
     "dataset = 'detailed'\n",
     "test_fold = 1\n",
     "\n",
-    "nonlinearity='relu'\n",
-    "hidden_size = 8\n",
+    "nonlinearity='tanh'\n",
+    "hidden_size = 16\n",
     "num_layers = 2\n",
     "\n",
     "max_epoch = 1000\n",
@@ -204,17 +204,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test fold 1 \t Epoch [  0] \t Train Loss: 0.49186422 \t Val Loss: 0.49797019 \t Test Loss: 0.47026852\n",
-      "Test fold 1 \t Epoch [  1] \t Train Loss: 0.46137233 \t Val Loss: 0.47267466 \t Test Loss: 0.45940787\n",
-      "Test fold 1 \t Epoch [  2] \t Train Loss: 0.44998411 \t Val Loss: 0.46306698 \t Test Loss: 0.46127726\n",
-      "Test fold 1 \t Epoch [  3] \t Train Loss: 0.44781604 \t Val Loss: 0.46370550 \t Test Loss: 0.46049200\n"
+      "Test fold 1 \t Epoch [  0] \t Train Loss: 0.50295083 \t Val Loss: 0.46706015 \t Test Loss: 0.45827382\n",
+      "Test fold 1 \t Epoch [  1] \t Train Loss: 0.44903992 \t Val Loss: 0.46153924 \t Test Loss: 0.46419947\n",
+      "Test fold 1 \t Epoch [  2] \t Train Loss: 0.44735520 \t Val Loss: 0.46364089 \t Test Loss: 0.45978219\n",
+      "Test fold 1 \t Epoch [  3] \t Train Loss: 0.44785961 \t Val Loss: 0.46332020 \t Test Loss: 0.46008010\n",
+      "Test fold 1 \t Epoch [  4] \t Train Loss: 0.44842557 \t Val Loss: 0.46227062 \t Test Loss: 0.46161638\n",
+      "Test fold 1 \t Epoch [  5] \t Train Loss: 0.44846433 \t Val Loss: 0.46293795 \t Test Loss: 0.46051964\n",
+      "Test fold 1 \t Epoch [  6] \t Train Loss: 0.45075126 \t Val Loss: 0.46425630 \t Test Loss: 0.45929655\n",
+      "Test fold 1 \t Epoch [  7] \t Train Loss: 0.44856222 \t Val Loss: 0.46209750 \t Test Loss: 0.46204042\n",
+      "Test fold 1 \t Epoch [  8] \t Train Loss: 0.44826452 \t Val Loss: 0.46503208 \t Test Loss: 0.45888968\n",
+      "Test fold 1 \t Epoch [  9] \t Train Loss: 0.44849175 \t Val Loss: 0.46243408 \t Test Loss: 0.46131743\n",
+      "Test fold 1 \t Epoch [ 10] \t Train Loss: 0.44850959 \t Val Loss: 0.46326248 \t Test Loss: 0.46018317\n",
+      "Test fold 1 \t Epoch [ 11] \t Train Loss: 0.44901912 \t Val Loss: 0.46290225 \t Test Loss: 0.46061438\n",
+      "Test fold 1 \t Epoch [ 12] \t Train Loss: 0.44883279 \t Val Loss: 0.46327596 \t Test Loss: 0.46018486\n",
+      "Test fold 1 \t Epoch [ 13] \t Train Loss: 0.44936476 \t Val Loss: 0.46496934 \t Test Loss: 0.45895075\n",
+      "Test fold 1 \t Epoch [ 14] \t Train Loss: 0.44790239 \t Val Loss: 0.46263336 \t Test Loss: 0.46100674\n",
+      "Test fold 1 \t Epoch [ 15] \t Train Loss: 0.44835945 \t Val Loss: 0.46224231 \t Test Loss: 0.46175513\n",
+      "Test fold 1 \t Epoch [ 16] \t Train Loss: 0.44771582 \t Val Loss: 0.46328834 \t Test Loss: 0.46016822\n",
+      "Test fold 1 \t Epoch [ 17] \t Train Loss: 0.44853518 \t Val Loss: 0.46277531 \t Test Loss: 0.46083268\n",
+      "Test fold 1 \t Epoch [ 18] \t Train Loss: 0.44772923 \t Val Loss: 0.46215401 \t Test Loss: 0.46202244\n",
+      "Test fold 1 \t Epoch [ 19] \t Train Loss: 0.44838868 \t Val Loss: 0.46261929 \t Test Loss: 0.46108275\n",
+      "Test fold 1 \t Epoch [ 20] \t Train Loss: 0.44799922 \t Val Loss: 0.46311299 \t Test Loss: 0.46038052\n",
+      "Test fold 1 \t Epoch [ 21] \t Train Loss: 0.44823863 \t Val Loss: 0.46263346 \t Test Loss: 0.46102159\n",
+      "Test fold 1 \t Epoch [ 22] \t Train Loss: 0.44774903 \t Val Loss: 0.46249895 \t Test Loss: 0.46123437\n",
+      "Test fold 1 \t Epoch [ 23] \t Train Loss: 0.44836948 \t Val Loss: 0.46272768 \t Test Loss: 0.46090380\n",
+      "Test fold 1 \t Epoch [ 24] \t Train Loss: 0.44813970 \t Val Loss: 0.46249590 \t Test Loss: 0.46132885\n",
+      "Test fold 1 \t Epoch [ 25] \t Train Loss: 0.44764901 \t Val Loss: 0.46425880 \t Test Loss: 0.45940913\n",
+      "Test fold 1 \t Epoch [ 26] \t Train Loss: 0.44863284 \t Val Loss: 0.46261230 \t Test Loss: 0.46113751\n",
+      "Test fold 1 \t Epoch [ 27] \t Train Loss: 0.44804073 \t Val Loss: 0.46246224 \t Test Loss: 0.46140646\n",
+      "Test fold 1 \t Epoch [ 28] \t Train Loss: 0.44797412 \t Val Loss: 0.46305296 \t Test Loss: 0.46052709\n",
+      "Test fold 1 \t Epoch [ 29] \t Train Loss: 0.44879277 \t Val Loss: 0.46302723 \t Test Loss: 0.46053303\n",
+      "Test fold 1 \t Epoch [ 30] \t Train Loss: 0.44771731 \t Val Loss: 0.46350851 \t Test Loss: 0.45998374\n",
+      "Test fold 1 \t Epoch [ 31] \t Train Loss: 0.44797798 \t Val Loss: 0.46248341 \t Test Loss: 0.46130146\n",
+      "Test fold 1 \t Epoch [ 32] \t Train Loss: 0.44801395 \t Val Loss: 0.46213602 \t Test Loss: 0.46206094\n",
+      "Test fold 1 \t Epoch [ 33] \t Train Loss: 0.44782303 \t Val Loss: 0.46304709 \t Test Loss: 0.46047769\n",
+      "Test fold 1 \t Epoch [ 34] \t Train Loss: 0.44854782 \t Val Loss: 0.46254065 \t Test Loss: 0.46123191\n",
+      "Test fold 1 \t Epoch [ 35] \t Train Loss: 0.44794736 \t Val Loss: 0.46318402 \t Test Loss: 0.46031963\n",
+      "Test fold 1 \t Epoch [ 36] \t Train Loss: 0.44799735 \t Val Loss: 0.46289018 \t Test Loss: 0.46067581\n",
+      "Test fold 1 \t Epoch [ 37] \t Train Loss: 0.44788468 \t Val Loss: 0.46279906 \t Test Loss: 0.46081574\n",
+      "Test fold 1 \t Epoch [ 38] \t Train Loss: 0.44839300 \t Val Loss: 0.46257219 \t Test Loss: 0.46120336\n",
+      "Test fold 1 \t Epoch [ 39] \t Train Loss: 0.44928561 \t Val Loss: 0.46211858 \t Test Loss: 0.46216940\n",
+      "Test fold 1 \t Epoch [ 40] \t Train Loss: 0.44810785 \t Val Loss: 0.46263129 \t Test Loss: 0.46107878\n",
+      "Test fold 1 \t Epoch [ 41] \t Train Loss: 0.44775232 \t Val Loss: 0.46331499 \t Test Loss: 0.46019459\n",
+      "Test fold 1 \t Epoch [ 42] \t Train Loss: 0.44850436 \t Val Loss: 0.46180074 \t Test Loss: 0.46322024\n",
+      "Test fold 1 \t Epoch [ 43] \t Train Loss: 0.44796177 \t Val Loss: 0.46360669 \t Test Loss: 0.45993661\n",
+      "Test fold 1 \t Epoch [ 44] \t Train Loss: 0.44847987 \t Val Loss: 0.46362888 \t Test Loss: 0.45991304\n",
+      "Test fold 1 \t Epoch [ 45] \t Train Loss: 0.44811311 \t Val Loss: 0.46211333 \t Test Loss: 0.46222154\n",
+      "Test fold 1 \t Epoch [ 46] \t Train Loss: 0.44861859 \t Val Loss: 0.46270196 \t Test Loss: 0.46103552\n",
+      "Test fold 1 \t Epoch [ 47] \t Train Loss: 0.44793123 \t Val Loss: 0.46267610 \t Test Loss: 0.46106840\n",
+      "Test fold 1 \t Epoch [ 48] \t Train Loss: 0.44848614 \t Val Loss: 0.46238337 \t Test Loss: 0.46157569\n",
+      "Test fold 1 \t Epoch [ 49] \t Train Loss: 0.44805565 \t Val Loss: 0.46283539 \t Test Loss: 0.46080334\n",
+      "Test fold 1 \t Epoch [ 50] \t Train Loss: 0.44856770 \t Val Loss: 0.46391441 \t Test Loss: 0.45968070\n",
+      "Test fold 1 \t Epoch [ 51] \t Train Loss: 0.44879579 \t Val Loss: 0.46239529 \t Test Loss: 0.46155119\n",
+      "Early stopping triggered after 52 epochs.\n"
      ]
     }
    ],
