--- a/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_8_relu.ipynb
+++ b/model/RNN/old_experiment_code/rnn_detailed_Oct_7_2_8_relu.ipynb
@@ -25,8 +25,8 @@
     "dataset = 'detailed'\n",
     "test_fold = 1\n",
     "\n",
-    "nonlinearity='tanh'\n",
-    "hidden_size = 4\n",
+    "nonlinearity='relu'\n",
+    "hidden_size = 8\n",
     "num_layers = 2\n",
     "\n",
     "max_epoch = 1000\n",
@@ -204,15 +204,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test fold 1 \t Epoch [  0] \t Train Loss: 0.72063636 \t Val Loss: 0.66556800 \t Test Loss: 0.60308572\n",
-      "Test fold 1 \t Epoch [  1] \t Train Loss: 0.59340156 \t Val Loss: 0.57649713 \t Test Loss: 0.52672884\n"
+      "Test fold 1 \t Epoch [  0] \t Train Loss: 0.49186422 \t Val Loss: 0.49797019 \t Test Loss: 0.47026852\n",
+      "Test fold 1 \t Epoch [  1] \t Train Loss: 0.46137233 \t Val Loss: 0.47267466 \t Test Loss: 0.45940787\n",
+      "Test fold 1 \t Epoch [  2] \t Train Loss: 0.44998411 \t Val Loss: 0.46306698 \t Test Loss: 0.46127726\n",
+      "Test fold 1 \t Epoch [  3] \t Train Loss: 0.44781604 \t Val Loss: 0.46370550 \t Test Loss: 0.46049200\n",
+      "Test fold 1 \t Epoch [  4] \t Train Loss: 0.44895272 \t Val Loss: 0.46373084 \t Test Loss: 0.46036127\n",
+      "Test fold 1 \t Epoch [  5] \t Train Loss: 0.44869851 \t Val Loss: 0.46319897 \t Test Loss: 0.46083957\n",
+      "Test fold 1 \t Epoch [  6] \t Train Loss: 0.44789864 \t Val Loss: 0.46275606 \t Test Loss: 0.46141661\n",
+      "Test fold 1 \t Epoch [  7] \t Train Loss: 0.44825847 \t Val Loss: 0.46402535 \t Test Loss: 0.46001744\n",
+      "Test fold 1 \t Epoch [  8] \t Train Loss: 0.44774062 \t Val Loss: 0.46303700 \t Test Loss: 0.46092446\n",
+      "Test fold 1 \t Epoch [  9] \t Train Loss: 0.44784771 \t Val Loss: 0.46285608 \t Test Loss: 0.46111336\n",
+      "Test fold 1 \t Epoch [ 10] \t Train Loss: 0.44772114 \t Val Loss: 0.46305864 \t Test Loss: 0.46083388\n",
+      "Test fold 1 \t Epoch [ 11] \t Train Loss: 0.44793561 \t Val Loss: 0.46278400 \t Test Loss: 0.46120219\n",
+      "Test fold 1 \t Epoch [ 12] \t Train Loss: 0.44772894 \t Val Loss: 0.46345334 \t Test Loss: 0.46039008\n",
+      "Test fold 1 \t Epoch [ 13] \t Train Loss: 0.44791151 \t Val Loss: 0.46281335 \t Test Loss: 0.46111936\n",
+      "Test fold 1 \t Epoch [ 14] \t Train Loss: 0.44759763 \t Val Loss: 0.46260892 \t Test Loss: 0.46143022\n",
+      "Test fold 1 \t Epoch [ 15] \t Train Loss: 0.44752915 \t Val Loss: 0.46285934 \t Test Loss: 0.46104752\n",
+      "Test fold 1 \t Epoch [ 16] \t Train Loss: 0.44757502 \t Val Loss: 0.46342168 \t Test Loss: 0.46041930\n",
+      "Test fold 1 \t Epoch [ 17] \t Train Loss: 0.44765812 \t Val Loss: 0.46274935 \t Test Loss: 0.46122136\n",
+      "Test fold 1 \t Epoch [ 18] \t Train Loss: 0.44791396 \t Val Loss: 0.46300998 \t Test Loss: 0.46088387\n",
+      "Test fold 1 \t Epoch [ 19] \t Train Loss: 0.44820348 \t Val Loss: 0.46355563 \t Test Loss: 0.46029804\n",
+      "Test fold 1 \t Epoch [ 20] \t Train Loss: 0.44765291 \t Val Loss: 0.46245528 \t Test Loss: 0.46167986\n",
+      "Test fold 1 \t Epoch [ 21] \t Train Loss: 0.44779017 \t Val Loss: 0.46246753 \t Test Loss: 0.46165526\n",
+      "Test fold 1 \t Epoch [ 22] \t Train Loss: 0.44823912 \t Val Loss: 0.46427068 \t Test Loss: 0.45972806\n",
+      "Test fold 1 \t Epoch [ 23] \t Train Loss: 0.44831501 \t Val Loss: 0.46300268 \t Test Loss: 0.46086538\n",
+      "Test fold 1 \t Epoch [ 24] \t Train Loss: 0.44798400 \t Val Loss: 0.46301784 \t Test Loss: 0.46083137\n",
+      "Test fold 1 \t Epoch [ 25] \t Train Loss: 0.44818732 \t Val Loss: 0.46314035 \t Test Loss: 0.46065898\n",
+      "Test fold 1 \t Epoch [ 26] \t Train Loss: 0.44792702 \t Val Loss: 0.46324195 \t Test Loss: 0.46055217\n",
+      "Test fold 1 \t Epoch [ 27] \t Train Loss: 0.44801309 \t Val Loss: 0.46238918 \t Test Loss: 0.46175962\n",
+      "Test fold 1 \t Epoch [ 28] \t Train Loss: 0.44759659 \t Val Loss: 0.46313348 \t Test Loss: 0.46068907\n",
+      "Test fold 1 \t Epoch [ 29] \t Train Loss: 0.44762948 \t Val Loss: 0.46268122 \t Test Loss: 0.46128154\n",
+      "Test fold 1 \t Epoch [ 30] \t Train Loss: 0.44792731 \t Val Loss: 0.46272096 \t Test Loss: 0.46121810\n",
+      "Test fold 1 \t Epoch [ 31] \t Train Loss: 0.44822228 \t Val Loss: 0.46295744 \t Test Loss: 0.46087750\n",
+      "Test fold 1 \t Epoch [ 32] \t Train Loss: 0.44767086 \t Val Loss: 0.46286644 \t Test Loss: 0.46098865\n",
+      "Test fold 1 \t Epoch [ 33] \t Train Loss: 0.44778138 \t Val Loss: 0.46312937 \t Test Loss: 0.46066014\n",
+      "Test fold 1 \t Epoch [ 34] \t Train Loss: 0.44799974 \t Val Loss: 0.46336457 \t Test Loss: 0.46041325\n",
+      "Test fold 1 \t Epoch [ 35] \t Train Loss: 0.44761489 \t Val Loss: 0.46285440 \t Test Loss: 0.46098833\n",
+      "Test fold 1 \t Epoch [ 36] \t Train Loss: 0.44789422 \t Val Loss: 0.46303029 \t Test Loss: 0.46080872\n",
+      "Test fold 1 \t Epoch [ 37] \t Train Loss: 0.44790557 \t Val Loss: 0.46358441 \t Test Loss: 0.46025773\n",
+      "Test fold 1 \t Epoch [ 38] \t Train Loss: 0.44758054 \t Val Loss: 0.46299939 \t Test Loss: 0.46083878\n",
+      "Test fold 1 \t Epoch [ 39] \t Train Loss: 0.44761215 \t Val Loss: 0.46316302 \t Test Loss: 0.46063215\n",
+      "Test fold 1 \t Epoch [ 40] \t Train Loss: 0.44803834 \t Val Loss: 0.46257859 \t Test Loss: 0.46141690\n",
+      "Test fold 1 \t Epoch [ 41] \t Train Loss: 0.44763733 \t Val Loss: 0.46344472 \t Test Loss: 0.46038624\n",
+      "Test fold 1 \t Epoch [ 42] \t Train Loss: 0.44761355 \t Val Loss: 0.46327049 \t Test Loss: 0.46055647\n",
+      "Test fold 1 \t Epoch [ 43] \t Train Loss: 0.44752840 \t Val Loss: 0.46306469 \t Test Loss: 0.46077911\n",
+      "Test fold 1 \t Epoch [ 44] \t Train Loss: 0.44797549 \t Val Loss: 0.46344253 \t Test Loss: 0.46035186\n",
+      "Test fold 1 \t Epoch [ 45] \t Train Loss: 0.44773767 \t Val Loss: 0.46249684 \t Test Loss: 0.46156131\n",
+      "Test fold 1 \t Epoch [ 46] \t Train Loss: 0.44781165 \t Val Loss: 0.46354861 \t Test Loss: 0.46027069\n",
+      "Test fold 1 \t Epoch [ 47] \t Train Loss: 0.44836903 \t Val Loss: 0.46314024 \t Test Loss: 0.46069672\n",
+      "Test fold 1 \t Epoch [ 48] \t Train Loss: 0.44755159 \t Val Loss: 0.46316155 \t Test Loss: 0.46064843\n",
+      "Test fold 1 \t Epoch [ 49] \t Train Loss: 0.44761976 \t Val Loss: 0.46321492 \t Test Loss: 0.46054048\n",
+      "Test fold 1 \t Epoch [ 50] \t Train Loss: 0.44776012 \t Val Loss: 0.46259585 \t Test Loss: 0.46137258\n",
+      "Test fold 1 \t Epoch [ 51] \t Train Loss: 0.44759498 \t Val Loss: 0.46318591 \t Test Loss: 0.46058269\n",
+      "Test fold 1 \t Epoch [ 52] \t Train Loss: 0.44834545 \t Val Loss: 0.46378852 \t Test Loss: 0.46000223\n",
+      "Test fold 1 \t Epoch [ 53] \t Train Loss: 0.44842693 \t Val Loss: 0.46247341 \t Test Loss: 0.46159384\n",
+      "Test fold 1 \t Epoch [ 54] \t Train Loss: 0.44765595 \t Val Loss: 0.46269826 \t Test Loss: 0.46123383\n",
+      "Test fold 1 \t Epoch [ 55] \t Train Loss: 0.44772009 \t Val Loss: 0.46262945 \t Test Loss: 0.46135210\n",
+      "Test fold 1 \t Epoch [ 56] \t Train Loss: 0.44752662 \t Val Loss: 0.46303646 \t Test Loss: 0.46078708\n",
+      "Test fold 1 \t Epoch [ 57] \t Train Loss: 0.44767128 \t Val Loss: 0.46268326 \t Test Loss: 0.46128118\n",
+      "Test fold 1 \t Epoch [ 58] \t Train Loss: 0.44760735 \t Val Loss: 0.46263823 \t Test Loss: 0.46137178\n",
+      "Test fold 1 \t Epoch [ 59] \t Train Loss: 0.44758095 \t Val Loss: 0.46312893 \t Test Loss: 0.46070193\n",
+      "Test fold 1 \t Epoch [ 60] \t Train Loss: 0.44755293 \t Val Loss: 0.46335670 \t Test Loss: 0.46047239\n",
+      "Test fold 1 \t Epoch [ 61] \t Train Loss: 0.44763715 \t Val Loss: 0.46268545 \t Test Loss: 0.46129731\n",
+      "Test fold 1 \t Epoch [ 62] \t Train Loss: 0.44777296 \t Val Loss: 0.46330268 \t Test Loss: 0.46049719\n",
+      "Test fold 1 \t Epoch [ 63] \t Train Loss: 0.44845991 \t Val Loss: 0.46329328 \t Test Loss: 0.46052397\n",
+      "Test fold 1 \t Epoch [ 64] \t Train Loss: 0.44771923 \t Val Loss: 0.46312584 \t Test Loss: 0.46070876\n",
+      "Test fold 1 \t Epoch [ 65] \t Train Loss: 0.44757516 \t Val Loss: 0.46291742 \t Test Loss: 0.46091799\n",
+      "Test fold 1 \t Epoch [ 66] \t Train Loss: 0.44764380 \t Val Loss: 0.46287067 \t Test Loss: 0.46098879\n",
+      "Test fold 1 \t Epoch [ 67] \t Train Loss: 0.44763151 \t Val Loss: 0.46312824 \t Test Loss: 0.46065010\n",
+      "Test fold 1 \t Epoch [ 68] \t Train Loss: 0.44766465 \t Val Loss: 0.46270164 \t Test Loss: 0.46117172\n",
+      "Test fold 1 \t Epoch [ 69] \t Train Loss: 0.44770445 \t Val Loss: 0.46257019 \t Test Loss: 0.46139091\n",
+      "Test fold 1 \t Epoch [ 70] \t Train Loss: 0.44764377 \t Val Loss: 0.46296192 \t Test Loss: 0.46082267\n",
+      "Test fold 1 \t Epoch [ 71] \t Train Loss: 0.44761553 \t Val Loss: 0.46305612 \t Test Loss: 0.46069287\n",
+      "Test fold 1 \t Epoch [ 72] \t Train Loss: 0.44773451 \t Val Loss: 0.46252100 \t Test Loss: 0.46147268\n",
+      "Test fold 1 \t Epoch [ 73] \t Train Loss: 0.44822764 \t Val Loss: 0.46277475 \t Test Loss: 0.46108875\n",
+      "Test fold 1 \t Epoch [ 74] \t Train Loss: 0.44766270 \t Val Loss: 0.46332919 \t Test Loss: 0.46040761\n",
+      "Test fold 1 \t Epoch [ 75] \t Train Loss: 0.44781968 \t Val Loss: 0.46288867 \t Test Loss: 0.46091781\n",
+      "Test fold 1 \t Epoch [ 76] \t Train Loss: 0.44831567 \t Val Loss: 0.46332148 \t Test Loss: 0.46039604\n",
+      "Test fold 1 \t Epoch [ 77] \t Train Loss: 0.44791151 \t Val Loss: 0.46276761 \t Test Loss: 0.46105331\n",
+      "Early stopping triggered after 78 epochs.\n"
      ]
     }
    ],
