--- a/test_acc_dataset_method.ipynb
+++ b/test_acc_dataset_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category = 'proposed'\n",
-    "model = 'RNN'"
+    "model = 'RNN'\n",
+    "prediction_folder = 'predictions_Oct_7'\n",
+    "csv_file = 'proposed.detailed.2.8.2.50.1.csv'\n",
+    "test_fold = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_folder_path = 'model/' + model + '/predictions/'"
+    "prediction_folder_path = f'model/{model}/{prediction_folder}/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,28 +43,28 @@
     "    evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
     "    fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
     "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    lldas_df = pd.read_csv(prediction_folder_path + category + \".\" + dataset + '.' + str(test_fold) + '.csv')\n",
+    "    lldas_df = pd.read_csv(prediction_folder_path + csv_file)\n",
     "    return get_acc(eval_df, lldas_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "92.75956284153006"
+       "92.21311475409836"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_acc_from('detailed', 1)"
+    "get_acc_from('detailed', test_fold)"
    ]
   }
  ],
