--- a/model/RNN/gru_detailed_Oct_8_1_4_batch_1.ipynb
+++ b/model/RNN/gru_detailed_Oct_8_1_4_batch_1.ipynb
@@ -129,9 +129,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test fold 1 \t Epoch [  0] \t Avg Train Loss: 0.48818697 \t Avg Val Loss: 0.46010287 \t Avg Test Loss: 0.47274296\n",
+      "Test fold 1 \t Epoch [ 10] \t Avg Train Loss: 0.35342038 \t Avg Val Loss: 0.41529643 \t Avg Test Loss: 0.40095867\n",
+      "Test fold 1 \t Epoch [ 20] \t Avg Train Loss: 0.33418733 \t Avg Val Loss: 0.37780980 \t Avg Test Loss: 0.30153955\n",
+      "Test fold 1 \t Epoch [ 30] \t Avg Train Loss: 0.30099158 \t Avg Val Loss: 0.32152066 \t Avg Test Loss: 0.31837147\n",
+      "Test fold 1 \t Epoch [ 40] \t Avg Train Loss: 0.28728437 \t Avg Val Loss: 0.28501661 \t Avg Test Loss: 0.28223527\n",
+      "Test fold 1 \t Epoch [ 50] \t Avg Train Loss: 0.28781704 \t Avg Val Loss: 0.25866659 \t Avg Test Loss: 0.27603784\n",
+      "Test fold 1 \t Epoch [ 60] \t Avg Train Loss: 0.27948384 \t Avg Val Loss: 0.26499318 \t Avg Test Loss: 0.24858796\n",
+      "Test fold 1 \t Epoch [ 70] \t Avg Train Loss: 0.23161474 \t Avg Val Loss: 0.23976243 \t Avg Test Loss: 0.22032188\n",
+      "Test fold 1 \t Epoch [ 80] \t Avg Train Loss: 0.20620292 \t Avg Val Loss: 0.20194550 \t Avg Test Loss: 0.18084836\n",
+      "Test fold 1 \t Epoch [ 90] \t Avg Train Loss: 0.20040819 \t Avg Val Loss: 0.21756215 \t Avg Test Loss: 0.18797727\n",
+      "Test fold 1 \t Epoch [100] \t Avg Train Loss: 0.19160198 \t Avg Val Loss: 0.24006811 \t Avg Test Loss: 0.23330914\n",
+      "Test fold 1 \t Epoch [110] \t Avg Train Loss: 0.18905730 \t Avg Val Loss: 0.20876205 \t Avg Test Loss: 0.18342033\n",
+      "Test fold 1 \t Epoch [120] \t Avg Train Loss: 0.18218049 \t Avg Val Loss: 0.21907181 \t Avg Test Loss: 0.18401673\n",
+      "Test fold 1 \t Epoch [130] \t Avg Train Loss: 0.18316874 \t Avg Val Loss: 0.23054772 \t Avg Test Loss: 0.19299951\n",
+      "Early stopping triggered after 131 epochs.\n",
+      "Best Train Loss: 0.20620292\n",
+      "Best Validation Loss: 0.20194550\n",
+      "Test Loss associated with Best Validation Loss: 0.18084836\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
     "folds_df = pd.read_csv(f'../../training_data/{dataset}/folds.csv')\n",
