--- a/model/RNN/lstm_detailed_Oct_8_1_4_batch_1.ipynb
+++ b/model/RNN/lstm_detailed_Oct_8_1_4_batch_1.ipynb
@@ -136,7 +136,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test fold 1 \t Epoch [  0] \t Avg Train Loss: 0.46065011 \t Avg Val Loss: 0.45747398 \t Avg Test Loss: 0.45754720\n"
+      "Test fold 1 \t Epoch [  0] \t Avg Train Loss: 0.46065011 \t Avg Val Loss: 0.45747398 \t Avg Test Loss: 0.45754720\n",
+      "Test fold 1 \t Epoch [ 10] \t Avg Train Loss: 0.43908975 \t Avg Val Loss: 0.47726818 \t Avg Test Loss: 0.44762400\n",
+      "Test fold 1 \t Epoch [ 20] \t Avg Train Loss: 0.34143274 \t Avg Val Loss: 0.37938164 \t Avg Test Loss: 0.33258560\n",
+      "Test fold 1 \t Epoch [ 30] \t Avg Train Loss: 0.32159817 \t Avg Val Loss: 0.36324245 \t Avg Test Loss: 0.33826694\n",
+      "Test fold 1 \t Epoch [ 40] \t Avg Train Loss: 0.31686911 \t Avg Val Loss: 0.35995635 \t Avg Test Loss: 0.29147655\n",
+      "Test fold 1 \t Epoch [ 50] \t Avg Train Loss: 0.30390887 \t Avg Val Loss: 0.32792252 \t Avg Test Loss: 0.29448253\n",
+      "Test fold 1 \t Epoch [ 60] \t Avg Train Loss: 0.30695307 \t Avg Val Loss: 0.34383491 \t Avg Test Loss: 0.28864458\n",
+      "Test fold 1 \t Epoch [ 70] \t Avg Train Loss: 0.29626652 \t Avg Val Loss: 0.32691228 \t Avg Test Loss: 0.31188111\n",
+      "Test fold 1 \t Epoch [ 80] \t Avg Train Loss: 0.29038005 \t Avg Val Loss: 0.34014122 \t Avg Test Loss: 0.31131376\n",
+      "Test fold 1 \t Epoch [ 90] \t Avg Train Loss: 0.29509314 \t Avg Val Loss: 0.36517683 \t Avg Test Loss: 0.30005361\n",
+      "Test fold 1 \t Epoch [100] \t Avg Train Loss: 0.28336494 \t Avg Val Loss: 0.34795748 \t Avg Test Loss: 0.30735145\n",
+      "Test fold 1 \t Epoch [110] \t Avg Train Loss: 0.27784208 \t Avg Val Loss: 0.34527198 \t Avg Test Loss: 0.28060219\n",
+      "Test fold 1 \t Epoch [120] \t Avg Train Loss: 0.27773564 \t Avg Val Loss: 0.36049304 \t Avg Test Loss: 0.27781013\n",
+      "Test fold 1 \t Epoch [130] \t Avg Train Loss: 0.28476698 \t Avg Val Loss: 0.34287126 \t Avg Test Loss: 0.27618974\n",
+      "Test fold 1 \t Epoch [140] \t Avg Train Loss: 0.27309836 \t Avg Val Loss: 0.35369325 \t Avg Test Loss: 0.28660674\n",
+      "Test fold 1 \t Epoch [150] \t Avg Train Loss: 0.27110961 \t Avg Val Loss: 0.35743601 \t Avg Test Loss: 0.29153895\n"
      ]
     }
    ],
