--- a/model/RNN/lstm_detailed_Oct_8_1_8_batch_1.ipynb
+++ b/model/RNN/lstm_detailed_Oct_8_1_8_batch_1.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,19 @@
       "Test fold 1 \t Epoch [ 10] \t Avg Train Loss: 0.44028317 \t Avg Val Loss: 0.45619997 \t Avg Test Loss: 0.44080752\n",
       "Test fold 1 \t Epoch [ 20] \t Avg Train Loss: 0.32553588 \t Avg Val Loss: 0.35973666 \t Avg Test Loss: 0.26716648\n",
       "Test fold 1 \t Epoch [ 30] \t Avg Train Loss: 0.31549134 \t Avg Val Loss: 0.33803940 \t Avg Test Loss: 0.29926560\n",
-      "Test fold 1 \t Epoch [ 40] \t Avg Train Loss: 0.29916317 \t Avg Val Loss: 0.39432158 \t Avg Test Loss: 0.32884470\n"
+      "Test fold 1 \t Epoch [ 40] \t Avg Train Loss: 0.29916317 \t Avg Val Loss: 0.39432158 \t Avg Test Loss: 0.32884470\n",
+      "Test fold 1 \t Epoch [ 50] \t Avg Train Loss: 0.27240516 \t Avg Val Loss: 0.33087745 \t Avg Test Loss: 0.29385118\n",
+      "Test fold 1 \t Epoch [ 60] \t Avg Train Loss: 0.31229178 \t Avg Val Loss: 0.36903070 \t Avg Test Loss: 0.35162734\n",
+      "Test fold 1 \t Epoch [ 70] \t Avg Train Loss: 0.27467753 \t Avg Val Loss: 0.32879506 \t Avg Test Loss: 0.29249271\n",
+      "Test fold 1 \t Epoch [ 80] \t Avg Train Loss: 0.25051834 \t Avg Val Loss: 0.33316155 \t Avg Test Loss: 0.29555538\n",
+      "Test fold 1 \t Epoch [ 90] \t Avg Train Loss: 0.23187700 \t Avg Val Loss: 0.34080114 \t Avg Test Loss: 0.28856770\n",
+      "Test fold 1 \t Epoch [100] \t Avg Train Loss: 0.22436331 \t Avg Val Loss: 0.35417198 \t Avg Test Loss: 0.33494936\n",
+      "Test fold 1 \t Epoch [110] \t Avg Train Loss: 0.22184273 \t Avg Val Loss: 0.33330711 \t Avg Test Loss: 0.31344322\n",
+      "Test fold 1 \t Epoch [120] \t Avg Train Loss: 0.20996429 \t Avg Val Loss: 0.36022710 \t Avg Test Loss: 0.30366381\n",
+      "Early stopping triggered after 128 epochs.\n",
+      "Best Train Loss: 0.25525548\n",
+      "Best Validation Loss: 0.29382035\n",
+      "Test Loss associated with Best Validation Loss: 0.29932461\n"
      ]
     }
    ],
