--- a/model/experiment/linear_2_systematic.ipynb
+++ b/model/experiment/linear_2_systematic.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'detailed'\n",
+    "dataset = 'systematic'\n",
     "chosen_feature = ['log_variance', 'loglog_count']"
    ]
   },
@@ -70,12 +70,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test fold: 1 \t Test Loss: 0.20950757\n",
-      "Test fold: 2 \t Test Loss: 0.24253958\n",
-      "Test fold: 3 \t Test Loss: 0.20580968\n",
-      "Test fold: 4 \t Test Loss: 0.20767249\n",
-      "Test fold: 5 \t Test Loss: 0.29568884\n",
-      "Test fold: 6 \t Test Loss: 0.23169214\n"
+      "Test fold: 1 \t Test Loss: 0.08095080\n",
+      "Test fold: 2 \t Test Loss: 0.06858940\n",
+      "Test fold: 3 \t Test Loss: 0.07166144\n",
+      "Test fold: 4 \t Test Loss: 0.08258455\n",
+      "Test fold: 5 \t Test Loss: 0.07257746\n",
+      "Test fold: 6 \t Test Loss: 0.08724432\n"
      ]
     }
    ],
