--- a/test_acc_dataset_method.ipynb
+++ b/test_acc_dataset_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = 'RNN'\n",
-    "prediction_folder = 'predictions_Oct_7'\n",
-    "csv_file = 'proposed.detailed.2.8.2.50.1.csv'\n",
+    "prediction_folder = 'predictions'\n",
+    "csv_file = 'proposed.detailed.1.8.1.50.1.csv'\n",
     "test_fold = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "92.21311475409836"
+       "90.57377049180327"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
