--- a/model/RNN/gru_systematic_Oct_11.ipynb
+++ b/model/RNN/gru_systematic_Oct_11.ipynb
@@ -208,7 +208,8 @@
       "Test fold 2 \t Epoch [120] \t Avg Train Loss: 0.12118123 \t Avg Val Loss: 0.12960692 \t Avg Test Loss: 0.15114325\n",
       "Test fold 2 \t Epoch [140] \t Avg Train Loss: 0.12193397 \t Avg Val Loss: 0.12730982 \t Avg Test Loss: 0.15115294\n",
       "Test fold 2 \t Epoch [160] \t Avg Train Loss: 0.12562220 \t Avg Val Loss: 0.12399186 \t Avg Test Loss: 0.15613107\n",
-      "Test fold 2 \t Epoch [180] \t Avg Train Loss: 0.12144632 \t Avg Val Loss: 0.12941999 \t Avg Test Loss: 0.15199888\n"
+      "Test fold 2 \t Epoch [180] \t Avg Train Loss: 0.12144632 \t Avg Val Loss: 0.12941999 \t Avg Test Loss: 0.15199888\n",
+      "Test fold 2 \t Epoch [200] \t Avg Train Loss: 0.12845921 \t Avg Val Loss: 0.12748513 \t Avg Test Loss: 0.14935408\n"
      ]
     }
    ],
