--- a/model/RNN/lstm_detailed_Oct_11.ipynb
+++ b/model/RNN/lstm_detailed_Oct_11.ipynb
@@ -449,7 +449,10 @@
       "Test fold 5 \t Epoch [ 80] \t Avg Train Loss: 0.29231008 \t Avg Val Loss: 0.32026450 \t Avg Test Loss: 0.37576782\n",
       "Test fold 5 \t Epoch [100] \t Avg Train Loss: 0.27821964 \t Avg Val Loss: 0.33070397 \t Avg Test Loss: 0.35368885\n",
       "Test fold 5 \t Epoch [120] \t Avg Train Loss: 0.26495529 \t Avg Val Loss: 0.30278112 \t Avg Test Loss: 0.35409703\n",
-      "Test fold 5 \t Epoch [140] \t Avg Train Loss: 0.26013678 \t Avg Val Loss: 0.30026711 \t Avg Test Loss: 0.36324091\n"
+      "Test fold 5 \t Epoch [140] \t Avg Train Loss: 0.26013678 \t Avg Val Loss: 0.30026711 \t Avg Test Loss: 0.36324091\n",
+      "Test fold 5 \t Epoch [160] \t Avg Train Loss: 0.25727819 \t Avg Val Loss: 0.27548888 \t Avg Test Loss: 0.34976382\n",
+      "Test fold 5 \t Epoch [180] \t Avg Train Loss: 0.23468729 \t Avg Val Loss: 0.25027298 \t Avg Test Loss: 0.32848747\n",
+      "Test fold 5 \t Epoch [200] \t Avg Train Loss: 0.22488950 \t Avg Val Loss: 0.24798574 \t Avg Test Loss: 0.32116926\n"
      ]
     }
    ],
