--- a/model/RNN/lstm_systematic_Oct_11.ipynb
+++ b/model/RNN/lstm_systematic_Oct_11.ipynb
@@ -460,7 +460,10 @@
       "Test fold 1 \t Epoch [160] \t Avg Train Loss: 0.12025811 \t Avg Val Loss: 0.16784640 \t Avg Test Loss: 0.13037605\n",
       "Test fold 1 \t Early stopping at Epoch [176]\n",
       "Test fold 1 \t Training completed for GRU layers 2 \t Hidden size 2 \t Best Val Loss: 0.15484119 \t Best Test Loss: 0.15436772\n",
-      "Test fold 2 \t Epoch [  0] \t Avg Train Loss: 0.26787455 \t Avg Val Loss: 0.31680995 \t Avg Test Loss: 0.22772613\n"
+      "Test fold 2 \t Epoch [  0] \t Avg Train Loss: 0.26787455 \t Avg Val Loss: 0.31680995 \t Avg Test Loss: 0.22772613\n",
+      "Test fold 2 \t Epoch [ 20] \t Avg Train Loss: 0.24316561 \t Avg Val Loss: 0.27980703 \t Avg Test Loss: 0.20673172\n",
+      "Test fold 2 \t Epoch [ 40] \t Avg Train Loss: 0.18304100 \t Avg Val Loss: 0.19768372 \t Avg Test Loss: 0.15772557\n",
+      "Test fold 2 \t Epoch [ 60] \t Avg Train Loss: 0.15715665 \t Avg Val Loss: 0.22047826 \t Avg Test Loss: 0.17094019\n"
      ]
     }
    ],
