--- a/model/RNN/rnn_detailed_Oct_11.ipynb
+++ b/model/RNN/rnn_detailed_Oct_11.ipynb
@@ -263,7 +263,11 @@
       "Test fold 1 \t Epoch [  0] \t Avg Train Loss: 0.47319640 \t Avg Val Loss: 0.46433697 \t Avg Test Loss: 0.46011482\n",
       "NaN loss detected at Epoch [17], Step [1345]\n",
       "Test fold 1 \t Training completed for GRU layers 1 \t Hidden size 8 \t Best Val Loss: 0.36786914 \t Best Test Loss: 0.38108319\n",
-      "Test fold 2 \t Epoch [  0] \t Avg Train Loss: 0.45952570 \t Avg Val Loss: 0.35722713 \t Avg Test Loss: 0.51724324\n"
+      "Test fold 2 \t Epoch [  0] \t Avg Train Loss: 0.45952570 \t Avg Val Loss: 0.35722713 \t Avg Test Loss: 0.51724324\n",
+      "NaN loss detected at Epoch [17], Step [1274]\n",
+      "Test fold 2 \t Training completed for GRU layers 1 \t Hidden size 8 \t Best Val Loss: 0.31362239 \t Best Test Loss: 0.45372443\n",
+      "Test fold 3 \t Epoch [  0] \t Avg Train Loss: 0.45338422 \t Avg Val Loss: 0.54435560 \t Avg Test Loss: 0.40531740\n",
+      "Test fold 3 \t Epoch [ 20] \t Avg Train Loss: 0.32249851 \t Avg Val Loss: 0.43945223 \t Avg Test Loss: 0.29360412\n"
      ]
     }
    ],
