--- a/model/RNN/rnn_systematic_Oct_11.ipynb
+++ b/model/RNN/rnn_systematic_Oct_11.ipynb
@@ -259,7 +259,8 @@
       "Test fold 4 \t Early stopping at Epoch [53]\n",
       "Test fold 4 \t Training completed for GRU layers 1 \t Hidden size 4 \t Best Val Loss: 0.23810235 \t Best Test Loss: 0.27230506\n",
       "Test fold 5 \t Epoch [  0] \t Avg Train Loss: 0.31184584 \t Avg Val Loss: 0.22824335 \t Avg Test Loss: 0.32599597\n",
-      "Test fold 5 \t Epoch [ 20] \t Avg Train Loss: 0.26049048 \t Avg Val Loss: 0.22439005 \t Avg Test Loss: 0.31978531\n"
+      "Test fold 5 \t Epoch [ 20] \t Avg Train Loss: 0.26049048 \t Avg Val Loss: 0.22439005 \t Avg Test Loss: 0.31978531\n",
+      "Test fold 5 \t Epoch [ 40] \t Avg Train Loss: 0.26023855 \t Avg Val Loss: 0.22398690 \t Avg Test Loss: 0.32332459\n"
      ]
     }
    ],
